--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.generate-unique-name=false
 spring.datasource.name=blog
 spring.h2.console.enabled=true
 
+spring.graphql.graphiql.enabled=true
+spring.graphql.schema.introspection.enabled=true
